Parse picture urls and generates possible completions for indirect links

--- a/meme-collector.cabal
+++ b/meme-collector.cabal
@@ -21,5 +21,6 @@ executable meme-collector
                      , protolude
                      , text
                      , optparse-applicative
+                     , attoparsec
                      , reddit
 		     
