Swapped out Lens for microlens-platform

--- a/meme-collector.cabal
+++ b/meme-collector.cabal
@@ -22,7 +22,7 @@ executable meme-collector
                      , text
                      , optparse-applicative
                      , attoparsec
-                     , lens
+                     , microlens-platform
                      , wreq
                      , reddit
                      , time
